#+TITLE: Changelog

* Unreleased

* 0.2.0 - 2018-07-16

** Added

+ Proper licensing attribution

** Changed

+ Updated code to work entirely independently of DuckDuckGo
  infrastructure

** Fixed

+ Use of experimental features that are now forbidden

* 0.1.0 - 2018-04-30

** Added

+ Imported code from
  https://github.com/duckduckgo/zeroclickinfo-goodies/pull/2644