@@ -2,6 +2,10 @@
 
 * Unreleased
 
+** Removed
+
+- dependency on =List::MoreUtils=
+
 * 0.2.0 - 2018-07-16
 
 ** Added
